stateless/kube-yaml/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: http-client
spec:
  containers:
  - name: http-client
    image: yancanmao/client
