stateless/kube-yaml/server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: http-server
  labels:           
    app: http-server
spec:
  containers:
  - name: http-server
    image: yancanmao/server
    ports:
    - containerPort: 8080
