stateless/kube-yaml/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-service
spec:
  type: ClusterIP 
  ports:
    - port: 8080
  selector:
    app: http-server
